--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
     "tailwind-scrollbar": "^3.0.0",
     "tailwind-scrollbar-hide": "^1.1.7"
